Archivos de texto para un mejor control

--- a/Lab2.csproj
+++ b/Lab2.csproj
@@ -101,5 +101,10 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="alquiler.txt" />
+    <Content Include="automovil.txt" />
+    <Content Include="clientes.txt" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
